Good work on the dynamic programming notebook

--- a/notebooks/notebook-2.ipynb
+++ b/notebooks/notebook-2.ipynb
@@ -7,7 +7,7 @@
     "editable": true
    },
    "source": [
-    "### Dynamic Programming"
+    "### Recursion, Memoization and Dynamic Programming"
    ]
   },
   {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -202,7 +202,7 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 6.91 µs\n"
+      "Wall time: 6.44 µs\n"
      ]
     },
     {
@@ -211,7 +211,7 @@
        "832040"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,6 +228,539 @@
    },
    "source": [
     "In this format, we don’t need to recurse or keep up with the memory intensive cache dictionary. These, add up to an even better performance."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now give it a try with factorials. Remember `4! = 4 * 3 * 2 * 1 = 24`. Can you give it try?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def factr(n):\n",
+    "    if n < 3:\n",
+    "        return n\n",
+    "    return n * factr(n - 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 43.2 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "265252859812191058636308480000000"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time factr(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "m = {}\n",
+    "def factm(n):\n",
+    "    if n in m:\n",
+    "        return m[n]\n",
+    "    m[n] = n if n < 3 else n * factr(n - 1)\n",
+    "    return m[n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 47.2 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "265252859812191058636308480000000"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time factm(30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def factdp(n):\n",
+    "    if n < 3: return n\n",
+    "    fact = 2\n",
+    "    for i in range(3, n + 1):\n",
+    "        fact *= i\n",
+    "    return fact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 7.87 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "265252859812191058636308480000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time factdp(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's think of a slightly different problem. Imagine that you want to find the cheapest way to go from city A to city B, but when you are about to buy your ticket, you see that you could hop in different combinations of route and get a much cheaper price than if you go directly. How do you efficiently calculate the best possible combination of tickets and come up with the cheapest route? We will start with basic recursion and work on improving it until we reach dynamic programming.\n",
+    "\n",
+    "For this last problem in dynamic programming, create 3 functions that calculates the cheapest route from city A to B. One recursive, the next with memoization and the last dynamic programming."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_fares(n_cities, max_fare):\n",
+    "    np.random.seed(123456)\n",
+    "    fares = np.sort(np.random.random((n_cities, n_cities)) * max_fare).astype(int)\n",
+    "    for i in range(len(fares)):\n",
+    "        fares[i] = np.roll(fares[i], i + 1)\n",
+    "    np.fill_diagonal(fares, 0)\n",
+    "    for i in range(1, len(fares)):\n",
+    "        for j in range(0, i):\n",
+    "            fares[i][j] = -1\n",
+    "    return fares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0, 126, 260, 897],\n",
+       "       [ -1,   0, 336, 376],\n",
+       "       [ -1,  -1,   0, 123],\n",
+       "       [ -1,  -1,  -1,   0]])"
+      ]
+     },
+     "execution_count": 320,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_cities = 4\n",
+    "max_fare = 1000\n",
+    "fares = get_fares(n_cities, max_fare)\n",
+    "fares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def cheapestr(s, d, c):\n",
+    "    if s == d or s == d - 1:\n",
+    "        return c[s][d]\n",
+    "    \n",
+    "    cheapest = c[s][d]\n",
+    "    for i in range(s + 1, d):\n",
+    "        tmp = cheapestr(s, i, c) + cheapestr(i, d, c)\n",
+    "        cheapest = tmp if tmp < cheapest else cheapest\n",
+    "    return cheapest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 322,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 1.12 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "383"
+      ]
+     },
+     "execution_count": 322,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestr(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "m = {}\n",
+    "def cheapestm(s, d, c):\n",
+    "    if s == d or s == d - 1:\n",
+    "        return c[s][d]\n",
+    "\n",
+    "    if s in m and d in m[s]:\n",
+    "        return m[s][d]\n",
+    "        \n",
+    "    cheapest = c[s][d]\n",
+    "    for i in range(s + 1, d):\n",
+    "        tmp = cheapestm(s, i, c) + cheapestm(i, d, c)\n",
+    "        cheapest = tmp if tmp < cheapest else cheapest\n",
+    "    m[s] = {}\n",
+    "    m[s][d] = cheapest\n",
+    "    return m[s][d]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 77.7 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "383"
+      ]
+     },
+     "execution_count": 324,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestm(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 325,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def cheapestdp(s, d, c):\n",
+    "    cheapest = c[0]\n",
+    "    for i in range(2, len(c)):\n",
+    "        for j in range(1, i):\n",
+    "            new_route = cheapest[j] + c[j][i]\n",
+    "            cheapest[i] = new_route if cheapest[i] > new_route else cheapest[i] \n",
+    "    return cheapest[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 327,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 15.7 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "383"
+      ]
+     },
+     "execution_count": 327,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestdp(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now try with a larger example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  0, 123, 126, 129, 228, 260, 336, 352, 373, 376, 447, 451, 543,\n",
+       "        776, 820, 840, 859, 897],\n",
+       "       [ -1,   0,  37,  61, 137, 146, 235, 245, 340, 343, 405, 574, 589,\n",
+       "        590, 594, 753, 852, 861],\n",
+       "       [ -1,  -1,   0,  16,  99, 117, 170, 199, 274, 342, 394, 401, 414,\n",
+       "        462, 481, 595, 610, 641],\n",
+       "       [ -1,  -1,  -1,   0,  94,  95, 134, 138, 155, 433, 471, 497, 560,\n",
+       "        630, 639, 683, 732, 758],\n",
+       "       [ -1,  -1,  -1,  -1,   0,  85, 140, 149, 329, 370, 386, 395, 477,\n",
+       "        544, 562, 566, 619, 634],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,   0,  29,  30,  44, 113, 187, 207, 247,\n",
+       "        249, 249, 356, 409, 630],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,   0,  22,  60, 168, 216, 277, 279,\n",
+       "        372, 419, 449, 606, 690],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,  30,  36, 273, 321, 355,\n",
+       "        415, 419, 421, 497, 500],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,  19, 123, 400, 412,\n",
+       "        418, 535, 547, 559, 591],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0, 110, 120, 140,\n",
+       "        204, 220, 395, 454, 488],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,  87, 169,\n",
+       "        219, 257, 312, 487, 527],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,   7,\n",
+       "         11,  22, 244, 250, 281],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,   0,\n",
+       "         10, 116, 123, 259, 287],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,\n",
+       "          0,  22,  93, 109, 236],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,\n",
+       "         -1,   0,  29, 157, 185],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,\n",
+       "         -1,  -1,   0,  18,  78],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,\n",
+       "         -1,  -1,  -1,   0,   4],\n",
+       "       [ -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,  -1,\n",
+       "         -1,  -1,  -1,  -1,   0]])"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_cities = 18 # this will take a little before 20 seconds. Try not to make it any larger :)\n",
+    "max_fare = 1000\n",
+    "fares = get_fares(n_cities, max_fare)\n",
+    "fares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 18.3 s, sys: 6.67 ms, total: 18.3 s\n",
+      "Wall time: 18.4 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "480"
+      ]
+     },
+     "execution_count": 338,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestr(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.7 s, sys: 3.33 ms, total: 14.7 s\n",
+      "Wall time: 14.7 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "480"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestm(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
+      "Wall time: 75.8 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "480"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time cheapestdp(0, len(fares[0]) - 1, fares)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BAAAAAM!\n",
+    "\n",
+    "There you have it!!! This is the power of dynamic programming.\n",
+    "\n",
+    "As mentioned in the tutorials, reinforcement learning leverages the power of dynamic programming in many algorithms. Value Iteration, Q-Learning, etc have a similar take on calculation. The bottom line is to think sequentially instead of recursively. And bottom-up instead of top-down. Let's continue this journey."
    ]
   }
  ],
