Dynamic programming, value iteration and policy iteration

--- a/notebooks/notebook-2.ipynb
+++ b/notebooks/notebook-2.ipynb
@@ -232,7 +232,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's now give it a try with factorials. Remember `4! = 4 * 3 * 2 * 1 = 24`. Can you give it try?"
    ]
@@ -241,7 +244,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -255,7 +260,9 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -285,7 +292,9 @@
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -301,7 +310,9 @@
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -331,7 +342,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -347,7 +360,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -375,7 +390,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's think of a slightly different problem. Imagine that you want to find the cheapest way to go from city A to city B, but when you are about to buy your ticket, you see that you could hop in different combinations of route and get a much cheaper price than if you go directly. How do you efficiently calculate the best possible combination of tickets and come up with the cheapest route? We will start with basic recursion and work on improving it until we reach dynamic programming.\n",
     "\n",
@@ -384,9 +402,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -395,9 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [],
@@ -416,21 +438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "array([[  0, 126, 260, 897],\n",
-       "       [ -1,   0, 336, 376],\n",
+       "       [ -1,   0,  50, 376],\n",
        "       [ -1,  -1,   0, 123],\n",
        "       [ -1,  -1,  -1,   0]])"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,14 +463,17 @@
     "n_cities = 4\n",
     "max_fare = 1000\n",
     "fares = get_fares(n_cities, max_fare)\n",
+    "fares[1][2] = 50\n",
     "fares"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -463,9 +490,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -473,16 +502,16 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 1.12 ms\n"
+      "Wall time: 21.9 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "383"
+       "299"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,9 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -518,9 +549,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -529,16 +562,16 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 77.7 µs\n"
+      "Wall time: 46.7 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "383"
+       "299"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,9 +582,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 9,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [],
    "source": [
@@ -566,9 +601,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -576,16 +613,16 @@
      "output_type": "stream",
      "text": [
       "CPU times: user 0 ns, sys: 0 ns, total: 0 ns\n",
-      "Wall time: 15.7 µs\n"
+      "Wall time: 33.9 µs\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "383"
+       "299"
       ]
      },
-     "execution_count": 327,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +633,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Let's now try with a larger example:"
    ]
@@ -606,6 +646,8 @@
    "execution_count": 337,
    "metadata": {
     "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": true
    },
    "outputs": [
@@ -666,7 +708,9 @@
    "cell_type": "code",
    "execution_count": 338,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -696,7 +740,9 @@
    "cell_type": "code",
    "execution_count": 339,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -726,7 +772,9 @@
    "cell_type": "code",
    "execution_count": 340,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
@@ -754,7 +802,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "BAAAAAM!\n",
     "\n",
